--- a/Steck1.html
+++ b/Steck1.html
@@ -105,9 +105,10 @@ f<sub>(x)</sub> = 1,5x<sup>2</sup> - <input type="text" id="Eintrag4" maxlength=
 
   <pre><p class="Aufgabe">Aufgabe 5
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (-1|2) und (1|2). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (-1|2) und (1|2). 
+Wie lautet die Funktionsgleichung dieser 
+Kurvenschar?
  
 <img src="Aufgabe5.jpg" >
 
@@ -117,9 +118,10 @@ Wie lautet die Funktionsgleichung dieser Kurvenschar?
 
   <pre><p class ="Aufgabe" >Aufgabe 6
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (2|0) und (-2|0). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (2|0) und (-2|0). 
+Wie lautet die Funktionsgleichung dieser 
+Kurvenschar?
 
 f<sub>(x)</sub> = ax<sup>2</sup> - <input type="text" id="Eintrag6" maxlength="2" size="1" style= background-color:yellow ></input> <button id="Pruef6" onclick="Aufgabe6()">Prüfen</button> </p></pre>
  
@@ -140,10 +142,10 @@ f<sub>(x)</sub> = ax<sup>2</sup> - <input type="text" id="Eintrag6" maxlength="2
 
   <pre><p class="Aufgabe">Aufgabe 7
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte A(2|0) und B(4|0) und haben an 
-der Stelle x = 3 ein Maximum. 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte A(2|0) und B(4|0) 
+und haben an der Stelle x = 3 ein Maximum. Wie 
+lautet die Funktionsgleichung dieser Kurvenschar?
 
 <img src="Aufgabe7.jpg" >
  
@@ -154,8 +156,8 @@ Wie lautet die Funktionsgleichung dieser Kurvenschar?
   <pre><p class ="Aufgabe" >Aufgabe 8
 
 Der Graph einer ganzrationalen Funktion 2. Grades 
-geht durch die Punkte A(0|2) und B(6|8) und berührt 
-die x-Achse im Punkt (c|0). 
+geht durch die Punkte A(0|2) und B(6|8) und 
+berührt die x-Achse im Punkt (c|0). 
 Wie lautet seine Funktionsgleichung?      
 
 f<sub>(x)</sub> = 0,5(x - <input type="text" id="Eintrag8" maxlength="1" size="1" style= background-color:yellow ></input> )<sup>2</sup> <button id="Pruef8" onclick="Aufgabe8()">Prüfen</button></p></pre>
@@ -177,10 +179,10 @@ f<sub>(x)</sub> = 0,5(x - <input type="text" id="Eintrag8" maxlength="1" size="1
 
   <pre><p class="Aufgabe">Aufgabe 9
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (0|0) und (2|0) und haben an 
-der Stelle x = 1 ein Minimum. 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (0|0) und (2|0) 
+und haben an der Stelle x = 1 ein Minimum. Wie 
+lautet die Funktionsgleichung dieser Kurvenschar?
 
 <img src="Aufgabe9.jpg" >
 
@@ -226,9 +228,10 @@ Wie lautet seine Funktionsgleichung?
 
   <pre><p class ="Aufgabe" >Aufgabe 12
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (-4|0) und (0|-4). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (-4|0) und 
+(0|-4). Wie lautet die Funktionsgleichung 
+dieser Kurvenschar?
 
 f<sub>(x)</sub> = ax<sup>2</sup> + (4a - 1) - <input type="text" id="Eintrag12" maxlength="1" size="1" style= background-color:yellow ></input> <button id="Pruef12" onclick="Aufgabe12()">Prüfen</button></p></pre><nobr>
 
@@ -301,7 +304,7 @@ Eine um den Faktor 0,5 gestauchte und nach oben
 geöffnete Parabel geht durch die Punkte (4|0) 
 und (2|0). Wie lautet ihre Funktionsgleichung?
 
-f<sub>(x)</sub> = 0,5x<sup>2</sup> <input type="text" id="Eintrag16" maxlength="2" size="1" style= background-color:yellow ></input> x + 4 <button id="Pruef16" onclick="Aufgabe16()">Prüfen</button></p></pre>
+f<sub>(x)</sub> = 0,5x<sup>2</sup> <input type="text" id="Eintrag16" maxlength="2" size="1" style= background-color:yellow ></input> x + 4 <button id="Pruef16" onclick="Aufgabe16()">Prüfen</button></p></b></pre>
  
                       <script>
                         function Aufgabe16() { 
