--- a/Steck3.html
+++ b/Steck3.html
@@ -31,9 +31,9 @@
     <pre><b><p class="Aufgabe">Aufgabe 81
 
 Der Graph einer ganzrationalen Funktion 4. Grades 
-berührt im Punkt (2|0) die x-Achse, hat im Punkt (0|0) 
-einen Wendepunkt, und die Wendetangente schneidet 
-die x-Achse unter einem Winkel von 45°. 
+berührt im Punkt (2|0) die x-Achse, hat im Punkt 
+(0|0) einen Wendepunkt, und die Wendetangente 
+schneidet die x-Achse unter einem Winkel von 45°. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe81.jpg" >
@@ -222,8 +222,8 @@ f<sub>(x)</sub> = x<sup>4</sup> - 3x<sup>2</sup> + ( <input type="text" id="Eint
     <pre><p class="Aufgabe">Aufgabe 91
 
 Der Graph einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades hat im Punkt (2|0) die Steigung 2 
-und bei x = -1 einen Wendepunkt. 
+Funktion 4. Grades hat im Punkt (2|0) die 
+Steigung 2 und bei x = -1 einen Wendepunkt. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe91.jpg" >
@@ -260,9 +260,9 @@ f<sub>(x)</sub> = -0,5x<sup>4</sup> + <input type="text" id="Eintrag92" maxlengt
     <pre><p class="Aufgabe">Aufgabe 93
 
 Der Graph einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades geht durch den Koordinatenursprung 
-und schneidet die x-Achse an der Stelle x = 3 mit 
-der Steigung -48. 
+Funktion 4. Grades geht durch den Koordinate-
+nursprung und schneidet die x-Achse an der Stelle 
+x = 3 mit der Steigung -48. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe93.jpg" >
@@ -351,8 +351,8 @@ Wie lautet seine Funktionsgleichung?
 
 Der Graph einer ganzrationalen Funktion 4. Grades 
 geht durch den Punkt (-2|-4), hat im Koordinaten-
-ursprung  ein relatives Minimum und im Punkt (-1|0) 
-die Steigung 3.
+ursprung  ein relatives Minimum und im Punkt 
+(-1|0) die Steigung 3.
 Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = 2x<sup>4</sup> + <input type="text" id="Eintrag98" maxlength="1" size="1" style= background-color:yellow ></input> x<sup>3</sup> + 5x<sup>2</sup> <button id="Pruef98" onclick="Aufgabe98()">Prüfen</button></p></pre>
@@ -389,9 +389,9 @@ Wie lautet seine Funktionsgleichung?
 
   <pre><p class ="Aufgabe" >Aufgabe 100
 
-einer achsensymmetrischen ganzrationalen Funktion 
-4. Grades berührt bei x = 2 die x-Achse und geht 
-durch den Punkt (0|8). 
+Der Graph einer achsensymmetrischen ganzrationalen 
+Funktion 4. Grades berührt bei x = 2 die x-Achse 
+und geht durch den Punkt (0|8). 
 Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = <input type="text" id="Eintrag100" maxlength="3" size="1" style= background-color:yellow ></input> x<sup>4</sup> + 4x<sup>2</sup> + 8 <button id="Pruef100" onclick="Aufgabe100()">Prüfen</button></p></pre>
@@ -415,8 +415,8 @@ f<sub>(x)</sub> = <input type="text" id="Eintrag100" maxlength="3" size="1" styl
     <pre><p class="Aufgabe">Aufgabe 101
 
 Der Graph einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades hat Nullstellen bei -5 und 3 und 
-geht durch denPunkt (0|1). 
+Funktion 4. Grades hat Nullstellen bei -5 und 3 
+und geht durch denPunkt (0|1). 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe101.jpg" >
@@ -428,9 +428,10 @@ Wie lautet seine Funktionsgleichung?
   <pre><p class ="Aufgabe" >Aufgabe 102
 
 Der Graph einer ganzrationalen Funktion 4. Grades 
-hat bei (0|0) einen Extremwert und bei (2|0) einen 
-Wendepunkt mit einer zur Geraden y = -4x parallelen 
-Tangente. Wie lautet seine Funktionsgleichung?
+hat bei (0|0) einen Extremwert und bei (2|0) 
+einen Wendepunkt mit einer zur Geraden y = -4x 
+parallelen Tangente. 
+Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = x<sup>4</sup> - <input type="text" id="Eintrag102" maxlength="1" size="1" style= background-color:yellow ></input> x<sup>3</sup> + 6x<sup>2</sup> <button id="Pruef102" onclick="Aufgabe102()">Prüfen</button></p></pre>
 
@@ -468,7 +469,8 @@ Wie lautet die Funktionsgleichung?
 
 Der Graph einer ganzrationalen Funktion 4. Grades 
 schneidet die y-Achse bei 4, berührt die x-Achse 
-bei x = 2 und hat im Punkt (1|2,25) die Steigung -3. 
+bei x = 2 und hat im Punkt (1|2,25) die 
+Steigung -3. 
 Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = <input type="text" id="Eintrag104" maxlength="4" size="1" style= background-color:yellow ></input> x<sup>4</sup> - 2x<sup>2</sup> + 4 <button id="Pruef104" onclick="Aufgabe104()">Prüfen</button></p></pre>
@@ -507,8 +509,8 @@ Wie lautet seine Funktionsgleichung?
 Der Graph einer achsensymmetrischen ganzrationalen 
 Funktion 4. Grades hat eine Nullstelle bei x = 4, 
 an der Stelle x = 1 eine Tangente parallel zur 
-Geraden y = -36x + 82 und geht durch den Punkt (3|-35). 
-Wie lautet seine Funktionsgleichung?
+Geraden y = -36x + 82 und geht durch den Punkt 
+(3|-35). Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = x<sup>4</sup> - <input type="text" id="Eintrag106" maxlength="2" size="1" style= background-color:yellow ></input> x<sup>2</sup> + 64 <button id="Pruef106" onclick="Aufgabe106()">Prüfen</button></p></b></pre>
 
