--- a/Steck4.html
+++ b/Steck4.html
@@ -43,11 +43,10 @@ Wie lautet seine Funktionsgleichung?
 
   <pre><p class ="Aufgabe" >Aufgabe 108
 
-Graph einer ganzrationalen Funktion 5. Grades 
-geht durch (0|0), hat in (-1|-2/3) einen 
-Wendepunkt mit derSteigung 1,25 und einen bei 
-(-2|-4/3). 
-Wie lautet seine Funktionsgleichung?
+Der Graph einer ganzrationalen Funktion 5. Grades 
+geht durch (0|0), hat in (-1|-2/3) einen Wende-
+punkt mit der Steigung 1,25 und einen bei 
+(-2|-4/3). Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = 0,25x<sup>5</sup> + <input type="text" id="Eintrag108" maxlength="4" size="1" style= background-color:yellow ></input> x<sup>4</sup> + (5/3)x<sup>3</sup> <button id="Pruef108" onclick="Aufgabe108()">Prüfen</button></p></pre>
 
@@ -107,9 +106,9 @@ f<sub>(x)</sub> = x<sup>6</sup> - <input type="text" id="Eintrag110" maxlength="
                       
     <pre><p class="Aufgabe">Aufgabe 111
 
-Der Graph einer zu (0|0) punktsymmetrischen ganzrationalen 
-Funktion 5. Grades hat in (1|1) die Steigung 0 und in 
-(2|f(2)) einen Wendepunkt. 
+Der Graph einer zu (0|0) punktsymmetrischen 
+ganzrationalen Funktion 5. Grades hat in (1|1) 
+die Steigung 0 und in (2|f(2)) einen Wendepunkt. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe111.jpg" >
@@ -120,9 +119,10 @@ Wie lautet seine Funktionsgleichung?
 
   <pre><p class ="Aufgabe" >Aufgabe 112
 
-Der Graph einer zu (0|0) punktsymmetrischen ganzrationalen 
-Funktion 5. Grades hat in (0|0) die Tangente y = 7x und in
-(1|0) einen Wendepunkt. Wie lautet seine Funktionsgleichung?
+Der Graph einer zu (0|0) punktsymmetrischen 
+ganzrationalen Funktion 5. Grades hat in (0|0) 
+die Tangente y = 7x und in(1|0) einen Wendepunkt. 
+Wie lautet seine Funktionsgleichung?
 
 f<sub>(x)</sub> = <input type="text" id="Eintrag112" maxlength="1" size="1" style= background-color:yellow ></input> x<sup>5</sup> - 10x<sup>3</sup> + 7x <button id="Pruef112" onclick="Aufgabe112()">Prüfen</button></p></pre>
 
