--- a/Steck5.html
+++ b/Steck5.html
@@ -42,12 +42,12 @@ Wie groß ist a?
 
   <pre><p class ="Aufgabe" >Aufgabe 118
 
-Rohrbrüche bei Leitungswasser sind über die Hausrat-
-versicherung abgesichert. Häufig müssen danach 
-Trockner für nass gewordenes Mauerwerk eingesetzt 
-werden. In einer Tabelle hat der Versicherer übliche 
-Trocknungszeiten für unterschiedliche Mauerdicken 
-aufgezeichnet. 
+Rohrbrüche bei Leitungswasser sind über die 
+Hausratversicherung abgesichert. Häufig müssen 
+danach Trockner für nass gewordenes Mauerwerk 
+eingesetzt werden. In einer Tabelle hat der 
+Versicherer übliche Trocknungszeiten für 
+unterschiedliche Mauerdicken aufgezeichnet. 
 
 Dicke in cm     5      10      15      20      25 
 Zeit in Tagen  30     120     270     480     750
@@ -102,12 +102,13 @@ c) In welcher Entfernung ist die Kugel 5 m hoch?
 
   <pre><p class ="Aufgabe" >Aufgabe 120
 
-Ein Brückenbogen über einem Fluss ist parabelförmig 
-und symmetrisch. Sein höchster Punkt liegt 4,05 m 
-über der Wasser- oberfläche, und er überspannt 12 m 
-von Ufer zu Ufer. Berechnen Sie die Bogenhöhe, um 
-festzustellen, ob sie für die Durchfahrt eines 4,96 m 
-breiten und 2,50 m hohen Schiffes ausreicht.  
+Ein Brückenbogen über einem Fluss ist parabel-
+förmig und symmetrisch. Sein höchster Punkt 
+liegt 4,05 m über der Wasser- oberfläche, und er 
+überspannt 12 m von Ufer zu Ufer. Berechnen Sie 
+die Bogenhöhe, um festzustellen, ob sie für die 
+Durchfahrt eines 4,96 m breiten und 2,50 m hohen 
+Schiffes ausreicht.  
 
 Bogenhöhe = <input type="text" id="Eintrag120" maxlength="4" size="1" style= background-color:yellow ></input> m. <button id="Pruef120" onclick="Aufgabe120()">Prüfen</button></p></pre>
 
@@ -225,13 +226,15 @@ Wie groß ist die maximale Durchhängung d?
 
   <pre><p class ="Aufgabe" >Aufgabe 126
 
-Mit Parabelflügen kann man Schwerelosigkeit simulieren. 
-Dazu wird ein Flugzeug unter einem Winkel von 45° auf 
-eine Höhe von 9000 m gebracht, dann der Schub so 
-reduziert, dass das Flugzeug erst noch steigt, aber nach 
-5000 m wieder auf 9000 m gesunken ist. Danach erhöht der 
-Pilot den Schub, damit es nicht abstürzt. 
-Auf welche maximale Höhe steigt es unter diesen Bedingungen?  
+Mit Parabelflügen kann man Schwerelosigkeit 
+simulieren. Dazu wird ein Flugzeug unter einem 
+Winkel von 45° auf eine Höhe von 9000 m gebracht, 
+dann der Schub so reduziert, dass das Flugzeug 
+erst noch steigt, aber nach 5000 m wieder auf 
+9000 m gesunken ist. Danach erhöht der Pilot den 
+Schub, damit es nicht abstürzt. 
+Auf welche maximale Höhe steigt es unter diesen 
+Bedingungen?  
 
 Auf <input type="text" id="Eintrag126" maxlength="5" size="2" style= background-color:yellow ></input> m. <button id="Pruef126" onclick="Aufgabe126()">Prüfen</button></p></pre>
  
@@ -267,13 +270,14 @@ groß ist. Wie lautet die Funktionsgleichung?
 
   <pre><p class ="Aufgabe" >Aufgabe 128
 
-Eine Hauseinfahrt hat zur Straße hin einen Höhenunterschied 
-von 1 m. Sie soll mithilfe einer ganzrationalen Funktion so 
-gestaltet werden, dass sie waagerecht 5 m von der Star0e 
-entfernt beginnt und waagerecht in die Straße einmündet. 1 m  
-von der Straße entfernt liegt auf Hausebene ein 70 cm hoher 
-Felsbrocken. In welchem Abstamd überstreicht ihn die geplante 
-Einfahrt?  
+Eine Hauseinfahrt hat zur Straße hin einen 
+Höhenunterschied von 1 m. Sie soll mithilfe einer 
+ganzrationalen Funktion so gestaltet werden, dass 
+sie waagerecht 5 m von der Star0e entfernt beginnt 
+und waagerecht in die Straße einmündet. 1 m von 
+der Straße entfernt liegt auf Hausebene ein 70 cm 
+hoher Felsbrocken. In welchem Abstamd überstreicht 
+ihn die geplante Einfahrt?  
 
 <img src="Aufgabe128.jpg" >
 
@@ -346,14 +350,15 @@ In der Massentierhaltung ist eine wichtige Größe,
 wann das Tier Schlachtgewicht erreicht. Messungen 
 haben ergeben:
 
-Anzahl Monate       0        2      4      5      6   
-Gewicht G in kg     1,5     30     67     80     88
+Anzahl Monate     0        2      4      5      6   
+Gewicht G in kg   1,5     30     67     80     88
 
-Man hat festgestellt, dass die Gewichtszunahme durch 
-eine ganzrationale Funktion 4. Grades beschrieben 
-werden kann.
+Man hat festgestellt, dass die Gewichtszunahme 
+durch eine ganzrationale Funktion 4. Grades 
+beschrieben werden kann.
 a) Welches Gewicht hat ein Tier nach einem Monat? 
-b) Nach wieviel Tagen ist die Gewichtszunahme maximal?
+b) Nach wieviel Tagen ist die Gewichtszunahme 
+maximal?
 
 <button  onclick="window.open('Steck_Aufgabe131.html');" >Lösung</button></p></pre>   
 
@@ -395,8 +400,8 @@ gelten folgende betriebliche Bedingungen: Ein
 Bauteil kostet in der Herstellung 90 GE, die 
 variablen Kosten für 2 Bauteile betragen 56 GE, 
 die Grenzkosten betragen 27 GE pro Bauteil und 
-das Minimum der Grenzkosten liegt bei 8/3 Bauteilen. 
-Jedes Bauteil wird für 90 GE verkauft. 
+das Minimum der Grenzkosten liegt bei 8/3 
+Bauteilen. Jedes Bauteil wird für 90 GE verkauft. 
 a) Wie hoch ist dasGewinnmaximum?
 b) Bei wieviel ME liegt das Betriebsminimum? 
 
@@ -452,10 +457,10 @@ Wieviel kosten 25 t, wenn die Kostenfunktion
 
   <pre><p class ="Aufgabe" >Aufgabe 136
 
-Die fixen Kosten bei der Herstellung eines Bauteils 
-betragen2000 €, die variablen Kosten gibt der 
-Hersteller mit 0,8x² + 60x an. Der Verkaufspreis 
-beträgt 180 €.
+Die fixen Kosten bei der Herstellung eines 
+Bauteils betragen2000 €, die variablen Kosten 
+gibt der Hersteller mit 0,8x² + 60x an. Der 
+Verkaufspreis beträgt 180 €.
 a) Bei welcher Menge liegt die Gewinnschwelle? 
 b) Wie groß ist der maximale Gewinn? 
 c) Ab welchem Verkaufspreis macht der Hersteller 
@@ -488,7 +493,8 @@ ertragsgesetzlichen Kostenfunktion. Ihre
 jährlichen Fixkosten betragen 30 000 €, bei einer 
 Menge von 20 ME fallen 60 000 € Kosten an, bei 
 einer Menge von 60 ME entstehen durchschnittliche 
-Kosten von 1200 €, dort ist auch das Betriebsminimum. 
+Kosten von 1200 €, dort ist auch das 
+Betriebsminimum. 
 Welche Kostenentstehen bei 40 ME? 
 
 <img src="Aufgabe137.jpg" > 
@@ -545,17 +551,20 @@ Wie hoch ist sein maximaler Gewinn?
   <pre><p class ="Aufgabe" >Aufgabe 140
 
 In einer landwirtschaftlichen Versuchsstation hat 
-man den Ertrag eines Erdbeerfeldes und die eingesetzte 
-Düngermenge in t gemessen. Zur graphischen 
-Darstellung dieses Sachverhaltes wird eine ganzrationale 
-Funktion 4. Grades mit folgenden Bedingungen eingesetzt. 
-Ungedüngt liefert das Feld minimal4 t Erdbeeren, der 
-Ertrag verdreifacht sich und wird maximal, wenn eine 
-Tonne Dünger eingesetzt wird, beim Einsatz von 2 t 
-sinkt der Ertrag wegen Überdüngung auf 0 t. 
+man den Ertrag eines Erdbeerfeldes und die 
+eingesetzte Düngermenge in t gemessen. Zur 
+graphischen Darstellung dieses Sachverhaltes wird 
+eine ganzrationale Funktion 4. Grades mit 
+folgenden Bedingungen eingesetzt. 
+Ungedüngt liefert das Feld minimal4 t Erdbeeren, 
+der Ertrag verdreifacht sich und wird maximal, 
+wenn eine Tonne Dünger eingesetzt wird, beim 
+Einsatz von 2 t sinkt der Ertrag wegen Überdüngung 
+auf 0 t. 
 (Der Graph liefert nur bis zu dieser Düngermenge 
 brauchbare Ergebnisse). 
-Welchen Ertrag erzielt man beim Einsatz von 1,5 t Dünger?  
+Welchen Ertrag erzielt man beim Einsatz von 1,5 t 
+Dünger?  
 
 Es sind <input type="text" id="Eintrag140" maxlength="3" size="1" style= background-color:yellow ></input> t <button id="Pruef140" onclick="Aufgabe140()">Prüfen</button></p></pre>
 
@@ -575,13 +584,14 @@ Es sind <input type="text" id="Eintrag140" maxlength="3" size="1" style= backgro
                       
     <pre><p class="Aufgabe">Aufgabe 141
 
-Das Wachstum einer Pflanze soll durch eine ganzrationale 
-Funktion 3. Grades modelliert werden. Folgende Messwerte 
-liegen vor:
+Das Wachstum einer Pflanze soll durch eine 
+ganzrationale Funktion 3. Grades modelliert 
+werden. Folgende Messwerte liegen vor:
 Monate            0      1       5 
 Höhe in cm       20     40     120 
-Nach 5 Monaten hat sie ihre maximale Höhe erreicht.
-Zu welchem Zeitpunkt ist der Höhenzuwachs am größten? 
+Nach 5 Monaten hat sie ihre maximale Höhe 
+erreicht.Zu welchem Zeitpunkt ist der Höhenzuwachs 
+am größten? 
 
 <img src="Aufgabe141.jpg" >
 
@@ -595,8 +605,8 @@ Ein Chemiker hat ein Mittel entwickelt und will
 dessen Wirkung mit einer ganzrationalen Funktion 
 3. Grades beschreiben. Dazu hat er die Reaktions-
 stärke R auf das Mittel in Abhängigkeit von der 
-Dosis in kg gemessen. (R = 0 bedeutet keine Reaktion, 
-je größer R, desto größer die Reaktion). 
+Dosis in kg gemessen. (R = 0 bedeutet keine 
+Reaktion, je größer R, desto größer die Reaktion). 
 
 Dosis in kg         0     1        2     4
 Reaktionsstärke R   0     1,25     4     8 
@@ -632,10 +642,10 @@ Laufgeschwindigkeit auf einem Laufband misst.
 Zu Beginn der Untersuchung beträgt sie -25.
 Bei 10 km/h beträgt sie 3, bei 14 km/h 3 und bei 
 15 km/h 4,25.
-Zur Veranschaulichung soll die Konzentration durch 
-eine Funktion 3. Grades dargestellt werden. Bei 
-welcher Geschwindigkeit ist die Laktatkonzentration 
-am geringsten? 
+Zur Veranschaulichung soll die Konzentration 
+durch eine Funktion 3. Grades dargestellt werden. 
+Bei welcher Geschwindigkeit ist die Laktat-
+konzentration am geringsten? 
 
 <img src="Aufgabe143.jpg" > 
 
@@ -738,11 +748,12 @@ variablen Stückkosten beim Betriebsminimum?
 
   <pre><p class ="Aufgabe" >Aufgabe 148
 
-Bei welcher Mengeneinheit liegt das Betriebsoptimum, 
-wenn Fixkosten von 9 GE vorliegen, bei 2 ME Kosten 
-von 69 GE, bei 6 ME welche von 93 GE und bei 10 ME 
-welche von 309 GE entstehen und der Betrieb mit 
-einer ertragsgesetzlichen Kostenfunktion arbeitet? 
+Bei welcher Mengeneinheit liegt das Betrieb-
+soptimum, wenn Fixkosten von 9 GE vorliegen, bei 
+2 ME Kosten von 69 GE, bei 6 ME welche von 93 GE 
+und bei 10 ME welche von 309 GE entstehen und der 
+Betrieb mit einer ertragsgesetzlichen 
+Kostenfunktion arbeitet? 
 
 Es liegt bei <input type="text" id="Eintrag148" maxlength="3" size="1" style= background-color:yellow ></input> ME. <button id="Pruef148" onclick="Aufgabe148()">Prüfen</button></p></pre>
 
@@ -770,9 +781,9 @@ Ein Produzent hat Grenzkosten von 38 GE bei 2 ME,
 Stückkosten von 42 GE bei 4 ME, Gesamtkosten von 
 504 GE bei 12 ME, und Betriebsoptimum und Betrieb-
 sminimum fallen zusammen. Er stellt diesen 
-Zusammenhang durch eine ganzrationale Kostenfunktion 
-dar. Bei welcher ME treten Betriebsoptimum und 
-Betriebsminimum auf? 
+Zusammenhang durch eine ganzrationale Kosten-
+funktion dar. Bei welcher ME treten Betriebs-
+optimum und Betriebsminimum auf? 
 
 <img src="Aufgabe149.jpg" > 
 
